k8s/network-policies/allow-ingress-to-api-from-ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-api-from-ingress-controller
  namespace: users-api
  labels:
    app.kubernetes.io/name: users-api
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: cloud-native-kubernetes-platform
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: users-api
      app.kubernetes.io/component: api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/component: controller
              app.kubernetes.io/name: ingress-nginx
      ports:
        - protocol: TCP
          port: 8080
